First Implementation for reactive style