@@ -5,7 +5,22 @@ The objective is to compare the way the code is written depending on the interac
 We use [Spring Boot](https://spring.io/projects/spring-boot) and implement a very simple API to retrieve a list of courses.  
 The courses are stored in a CSV file.
 
-Even though the API is simplistic, the code is written as if it is production coode.  
+Even though the API is simplistic, the code is written as if it is production code.  
+In particular, in this example, there is no real need for:
+* a representation class,
+* using `ResponseEntity`,
+* using an exception mapper.
+
+## Main Differences
+
+| Style                           | Controller return type                                          | Service return type               | Exception handling                              |
+|---------------------------------|-----------------------------------------------------------------|-----------------------------------|-------------------------------------------------|
+| [Synchronous API](./api-sync)   | `ResponseEntity<List<CourseRepresentation>>`                    | `List<Course>`                    | try / catch & `ResponseEntityExceptionHandler`  |
+| [Asynchronous API](./api-async) | `CompletableFuture<ResponseEntity<List<CourseRepresentation>>>` | `CompletableFuture<List<Course>>` |                                                 |
+| [Reactive API](./api-reactive)  | `ResponseEntity<Flux<CourseRepresentation>>`                    | `Flux<Course>`                    |                                                 |
+|                                 |                                                                 |                                   |                                                 |
+
+Note that since there is no semantic difference between an empty list of courses and no list at all, the service return type is not wrapped in an `Optional`.  
 
 ## Structure
 
@@ -14,6 +29,10 @@ The project is structured as follows :
 * [Synchronous API](./api-sync)
 * [Asynchronous API](./api-async)
 * [Reactive API](./api-reactive)
+
+We decided to create a module per type, in part because of what is mentioned in the [Spring Boot Reference Documentation](https://docs.spring.io/spring-boot/docs/2.7.3/reference/htmlsingle/#web.reactive):
+
+> Adding both `spring-boot-starter-web` and `spring-boot-starter-webflux` modules in your application results in **Spring Boot auto-configuring Spring MVC, not WebFlux**. ... You can still enforce your choice by setting the chosen application type to `SpringApplication.setWebApplicationType(WebApplicationType.REACTIVE)`.
 
 ## Pre-requisites
 
@@ -28,3 +47,57 @@ The following should be installed locally :
 
 The project is built using [Maven](https://maven.apache.org).
 
+## Run
+
+Each module can be run in the same manner.
+
+Here are the instructions for the `api-sync` module.
+
+### Command Line
+
+* Build and package
+
+> `mvn package`
+
+* Start the service
+
+> `cd api-sync`
+> `java --enable-preview -jar target/api-sync.jar`
+
+The server port is `9000` as specified in the [application configuration](./api-sync/src/main/resources/application.yaml).
+
+* Access the API
+
+> `curl -i 'http://localhost:9000/sync/courses?departmentCode=POL'`
+
+if you have [`json_pp`](https://www.unix.com/man-page/osx/1/json_pp/), you can pretty print the result:
+
+> `curl -X GET 'http://localhost:9000/sync/courses?departmentCode=POL' | json_pp`
+
+* Debug
+
+If you need to debug the service, use the following command to start the service
+
+> `java -Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n -jar target/api-sync.jar`
+
+then connect a remote debugging session to port `8000`
+
+* Profile using Java Mission Control
+
+Download Java Mission Control from [here for OpenJDK](https://jdk.java.net/jmc/) or [here for Oracle](https://www.oracle.com/technetwork/java/javaseproducts/downloads/jmc7-downloads-5868868.html) since it's not part of the JDK 11 anymore.
+
+If you need to profile the service, use the following command to start the service
+
+> `java -XX:+FlightRecorder -jar target/api-sync.jar`
+
+For offline profiling use
+
+> `java -XX:+FlightRecorder -XX:StartFlightRecording=duration=200s,filename=flight.jfr -jar target/api-sync.jar`
+
+## To Do
+
+* Add tests
+* Implement Reactive ( 204 when no courses + exception handling )
+* Add Virtual Thread style
+* Add an API with 2 parallel calls
+* Add a database call and an API call
